--- a/QuanLyBenXeWebApp/appsettings.json
+++ b/QuanLyBenXeWebApp/appsettings.json
@@ -1,8 +1,11 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"ConnectionStrings": {
+		"DefaultConnection": "Data Source=xceeded\\csth;Initial Catalog=BenXeDaNang;Integrated Security=True"
+	}
+	"Logging": {
+		"LogLevel": {
+			"Default": "Warning"
+		}
+	},
+	"AllowedHosts": "*"
 }
