--- a/QuanLyBenXeWebApp/appsettings.json
+++ b/QuanLyBenXeWebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
 	"ConnectionStrings": {
-		"DefaultConnection": "Data Source=ADMIN;Initial Catalog=DAPM;Integrated Security=True"
+		"DefaultConnection": "Data Source=xceeded\\csth;Initial Catalog=BenXeDaNang;Integrated Security=True"
 	},
 	"Logging": {
 		"LogLevel": {
